ingress/school-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #annotations:
    #kubernetes.io/change-cause: version2.0 is available
  name: schoolapp-deploy-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: school-app-v1
  template:
    metadata:
       name: school-pod
       labels:
         app: school-app-v1
    spec:
      containers:
      -  name: schoolapp-container-v1
         image: mangeshabnave/cgi-app-v1
---

apiVersion: v1
kind: Service
metadata:
   name: school-app-svc-v1
spec:
 selector:
   app: school-app-v1
 type: ClusterIP
 ports:
 - port: 80
   targetPort: 80
