ingress/school-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schoolapp-deploy-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: school-app-v2
  template:
    metadata:
       name: school-pod
       labels:
         app: school-app-v2
    spec:
      containers:
      -  name: schoolapp-container-v2
         image: mangeshabnave/cgi-app-v2
---
apiVersion: v1
kind: Service
metadata:
   name: school-app-svc-v2
spec:
 selector:
   app: school-app-v2
 type: ClusterIP
 ports:
 - port: 80
   targetPort: 80
